--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,8 @@
 @import "partials/__typography";
 @import "partials/__default";
+@import "partials/_palette";
 @import "partials/blocks/__header";
 @import "partials/blocks/__social-media";
 @import "partials/blocks/__order-call";
+@import "partials/blocks/_logo";
+@import "partials/blocks/_menu";
