feat: add services menu

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,3 +6,5 @@
 @import "partials/blocks/__order-call";
 @import "partials/blocks/_logo";
 @import "partials/blocks/_menu";
+@import "partials/blocks/_service-menu";
+@import "partials/blocks/_slogans";
