--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -114,4 +114,59 @@ body {
   color: #50c878;
 }
 
+.service-menu__list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #228be6;
+  margin-top: 10px;
+  padding: 8px 0;
+  border-radius: 8px 8px 0 0;
+}
+.service-menu__item {
+  max-width: 150px;
+  word-wrap: break-word;
+  text-align: center;
+}
+.service-menu__link {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #fff;
+  font-size: 14px;
+  transition-property: color;
+  transition-duration: 500ms;
+}
+.service-menu__link:hover {
+  color: #142276;
+}
+
+.slogans__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+.slogans__list::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #228be6;
+  opacity: 0.6;
+  z-index: -1;
+}
+.slogans__text {
+  color: #fff;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
 /*# sourceMappingURL=style.css.map */
