--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -143,13 +143,9 @@ body {
 }
 
 .slogans__body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   position: relative;
-  height: 500px;
-  z-index: 100;
+  padding-bottom: 45%;
+  overflow: hidden;
 }
 .slogans__video {
   position: absolute;
@@ -157,6 +153,7 @@ body {
   left: 0;
   width: 100%;
   height: auto;
+  z-index: -1;
 }
 .slogans__body::after {
   content: "";
@@ -167,14 +164,24 @@ body {
   width: 100%;
   height: 100%;
   background-color: #228be6;
-  opacity: 0.6;
-  z-index: -1;
+  opacity: 0.35;
+  z-index: 20;
+}
+.slogans__list {
+  position: absolute;
+  top: 35%;
+  left: 28%;
+  z-index: 50;
 }
 .slogans__text {
   color: #fff;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 26px;
+  margin-bottom: 15px;
+}
+.slogans__text:last-child {
+  margin-bottom: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
