--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,3 +8,6 @@
 @import "partials/blocks/_menu";
 @import "partials/blocks/_service-menu";
 @import "partials/blocks/_slogans";
+@import "partials/blocks/_section";
+@import "partials/blocks/_section-about";
+@import "partials/blocks/_title";
