--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,3 +11,5 @@
 @import "partials/blocks/_section";
 @import "partials/blocks/_section-about";
 @import "partials/blocks/_title";
+@import "partials/blocks/_benefits";
+@import "partials/blocks/_card";
