--- a/styles/partials/__palette.scss
+++ b/styles/partials/__palette.scss
@@ -3,4 +3,4 @@ $color-green-dark: #2a7281;
 $color-green-light: #50c878;
 $color-gray: #3a628b;
 $color-purple: #142276;
-$color-bg-gray: rgba(58, 98, 139, 0.3); ;
+$color-bg-gray: rgba(58, 98, 139, 0.3);
