--- a/styles/partials/blocks/__slogans.scss
+++ b/styles/partials/blocks/__slogans.scss
@@ -3,6 +3,9 @@
     position: relative;
     padding-bottom: 45%;
     overflow: hidden;
+    background: url("../../src/background/slogans/video-screenshot.png")
+      no-repeat center;
+    background-size: cover;
   }
 
   &__video {
@@ -11,7 +14,7 @@
     left: 0;
     width: 100%;
     height: auto;
-    z-index: -1;
+    z-index: 3;
   }
 
   &__body::after {
