feat: add clients block

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,3 +13,4 @@
 @import "partials/blocks/_title";
 @import "partials/blocks/_benefits";
 @import "partials/blocks/_card";
+@import "partials/blocks/_section-clients";
