--- a/styles/partials/__palette.scss
+++ b/styles/partials/__palette.scss
@@ -9,3 +9,4 @@ $color-white: rgba(255, 255, 255, 0.8);
 $color-bg-gray: rgba(58, 98, 139, 0.3);
 $color-bg-blue: rgba(34, 139, 230, 0.6);
 $color-bg-purple: rgba(20, 34, 118, 0.8);
+$color-bg-green: rgba(42, 114, 129, 0.8);
