--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -299,16 +299,16 @@ body {
   color: #142276;
 }
 
-.card_theme-light {
+.card_theme-green {
+  background-color: rgba(42, 114, 129, 0.8);
+}
+.card_theme-green .card__icon {
   background-color: #fff;
 }
-.card_theme-light .card__icon {
-  background-color: rgba(20, 34, 118, 0.8);
-}
-.card_theme-light .card__title {
+.card_theme-green .card__title {
   color: #000;
 }
-.card_theme-light .card__info-item {
+.card_theme-green .card__info-item {
   color: #000;
 }
 
@@ -323,6 +323,24 @@ body {
 }
 .card_theme-purple .card__info-item {
   color: rgba(255, 255, 255, 0.8);
+}
+
+.section-clients {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.section-clients__title {
+  padding-top: 35px;
+}
+.section-clients__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.section-clients__item {
+  display: block;
+}
+.section-clients__client-img {
+  max-width: 250px;
 }
 
 /*# sourceMappingURL=style.css.map */
