--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -198,12 +198,13 @@ body {
 }
 
 .section-about__title {
+  background-color: rgba(42, 114, 129, 0.8);
   padding-top: 35px;
+  padding-bottom: 15px;
 }
 .section-about__body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin-top: 15px;
 }
 .section-about__media {
   display: flex;
@@ -341,6 +342,17 @@ body {
 }
 .section-clients__client-img {
   max-width: 250px;
+}
+
+.section-docs__wrapper {
+  background-color: rgba(58, 98, 139, 0.8);
+}
+.section-docs__title {
+  padding-top: 35px;
+  padding-bottom: 25px;
+}
+.section-docs__title-text {
+  color: rgba(255, 255, 255, 0.8);
 }
 
 /*# sourceMappingURL=style.css.map */
