--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,3 +15,4 @@
 @import "partials/blocks/_card";
 @import "partials/blocks/_section-clients";
 @import "partials/blocks/_section-docs";
+@import "partials/blocks/_section-reviews";
