--- a/styles/partials/__palette.scss
+++ b/styles/partials/__palette.scss
@@ -4,9 +4,11 @@ $color-green-light: #50c878;
 $color-gray: #3a628b;
 $color-purple: #142276;
 $color-white: rgba(255, 255, 255, 0.8);
+$color-black-light: rgba(0, 0, 0, 0.5);
 
 //Backgrounds
 $color-bg-gray: rgba(58, 98, 139, 0.8);
+$color-bg-gray-light: rgba(58, 98, 139, 0.1);
 $color-bg-blue: rgba(34, 139, 230, 0.6);
 $color-bg-purple: rgba(20, 34, 118, 0.8);
 $color-bg-green: rgba(42, 114, 129, 0.8);
