--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,3 +16,6 @@
 @import "partials/blocks/_section-clients";
 @import "partials/blocks/_section-docs";
 @import "partials/blocks/_section-reviews";
+
+//Слайдер
+@import "partials/blocks/_slider";
