--- a/styles/partials/blocks/__section-reviews.scss
+++ b/styles/partials/blocks/__section-reviews.scss
@@ -1,25 +1,41 @@
 .section-reviews {
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   &__title {
     padding-top: 35px;
     margin-bottom: 35px;
   }
 
   //Review cards
-  &__review-cards {
+  &__gradient {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    max-width: 1000px;
-    margin: 0 auto;
+    justify-content: center;
+    margin-right: 15px;
+    border-radius: 15px;
+    padding: 2px;
+    min-width: 250px;
+    width: 250px;
+    height: 350px;
+    background: linear-gradient(139deg, #142276, #c88f5f, #2a7281);
+  }
+
+  &__gradient:last-child {
+    margin-right: 0px;
   }
 
   &__review-card {
-    max-width: 300px;
-    height: 350px;
+    width: 100%;
+    height: 100%;
     padding: 10px 15px;
-    background-color: $color-bg-gray-light;
-    border: 2px solid $color-bg-purple;
-    border-radius: 15px;
+    background-color: #e5e4e2;
+    border-radius: 14px;
+    opacity: 1;
   }
 
   &__user {
@@ -74,9 +90,5 @@
     font-weight: 300;
     text-align: justify;
     hyphens: auto;
-  }
-
-  //Progress bar
-  &__progress-bar {
   }
 }
