--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,7 @@
 @import "partials/blocks/_section-clients";
 @import "partials/blocks/_section-docs";
 @import "partials/blocks/_section-reviews";
+@import "partials/blocks/_footer";
 
 //Слайдер
 @import "partials/blocks/_slider";
