--- a/styles/partials/__palette.scss
+++ b/styles/partials/__palette.scss
@@ -12,3 +12,4 @@ $color-bg-gray-light: rgba(58, 98, 139, 0.1);
 $color-bg-blue: rgba(34, 139, 230, 0.6);
 $color-bg-purple: rgba(20, 34, 118, 0.8);
 $color-bg-green: rgba(42, 114, 129, 0.8);
+$color-bg-footer: rgba(58, 98, 139, 0.8);
