--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,12 +1,17 @@
+@import "partials/_palette";
 @import "partials/__typography";
 @import "partials/__default";
-@import "partials/_palette";
+@import "partials/blocks/_collumn-2";
+@import "partials/blocks/_main";
+@import "partials/blocks/_aside";
 @import "partials/blocks/__header";
 @import "partials/blocks/__social-media";
 @import "partials/blocks/__order-call";
 @import "partials/blocks/_logo";
-@import "partials/blocks/_menu";
+@import "partials/blocks/_contacts";
 @import "partials/blocks/_service-menu";
+@import "partials/blocks/__section-exptitle";
+@import "partials/blocks/_backgrounds";
 @import "partials/blocks/_slogans";
 @import "partials/blocks/_section";
 @import "partials/blocks/_section-about";
