--- a/styles/partials/__palette.scss
+++ b/styles/partials/__palette.scss
@@ -3,13 +3,22 @@ $color-green-dark: #2a7281;
 $color-green-light: #50c878;
 $color-gray: #3a628b;
 $color-purple: #142276;
-$color-white: rgba(255, 255, 255, 0.8);
 $color-black-light: rgba(0, 0, 0, 0.5);
 
 //Backgrounds
-$color-bg-gray: rgba(58, 98, 139, 0.8);
 $color-bg-gray-light: rgba(58, 98, 139, 0.1);
 $color-bg-blue: rgba(34, 139, 230, 0.6);
 $color-bg-purple: rgba(20, 34, 118, 0.8);
 $color-bg-green: rgba(42, 114, 129, 0.8);
 $color-bg-footer: rgba(58, 98, 139, 0.8);
+
+//New palette
+$color-dark: rgb(45, 32, 58);
+$color-bordo: rgb(125, 43, 65);
+$color-red: rgba(209, 40, 63, 0.8);
+$color-gold: rgba(255, 217, 0, 0.702);
+$color-white: rgba(255, 225, 240, 0.8);
+$color-peach: rgba(246, 191, 171, 0.9);
+$color-brown: rgba(191, 97, 85, 0.8);
+$color-leather: rgba(165, 1, 35, 0.5);
+$color-bg-gray: rgba(58, 98, 139, 0.8);
