--- a/pages/style.css
+++ b/pages/style.css
@@ -14,6 +14,66 @@ body {
   background-color: rgb(45, 32, 58);
 }
 
+.collumn-2__wrapper {
+  display: grid;
+  grid-template-rows: 2fr, 1fr;
+}
+
+.main__wrapper {
+  padding: 0 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: rgba(255, 225, 240, 0.8);
+  height: 100%;
+}
+.main__wrapper .main__text {
+  color: rgb(45, 32, 58);
+  text-align: justify;
+  margin-bottom: 20px;
+}
+.main__wrapper .main__list {
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+.main__wrapper .main__list-item {
+  color: rgb(45, 32, 58);
+}
+
+.main__text_bold {
+  font-weight: 700;
+}
+
+.aside {
+  grid-column: 2/3;
+  background-color: rgba(246, 191, 171, 0.9);
+}
+.aside__wrapper .aside__list {
+  margin-top: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  list-style: none;
+  margin-bottom: 20px;
+}
+.aside__wrapper .aside__list .aside__list-item {
+  text-transform: uppercase;
+  font-weight: 700;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.aside__wrapper .aside__list .aside__list-item .aside__list-link {
+  text-decoration: none;
+  color: rgba(20, 34, 118, 0.8);
+  transition-property: color;
+  transition-duration: 500ms;
+}
+.aside__wrapper .aside__list .aside__list-item .aside__list-link:hover {
+  color: rgba(191, 97, 85, 0.8);
+}
+
+.active {
+  color: rgb(125, 43, 65) !important;
+}
+
 .header__wrapper {
   max-width: 1600px;
   margin: 0 auto;
@@ -194,10 +254,49 @@ body {
   overflow-y: auto;
 }
 
-.exptitle {
-  text-align: center;
-  color: black;
-  background: red;
+.section-exptitle__title {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  z-index: -1;
+}
+.section-exptitle__title::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 217, 0, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 200;
+}
+.section-exptitle__title-text {
+  color: rgb(45, 32, 58);
+  font-size: 35px;
+  z-index: 999;
+}
+
+.title-bg-chem {
+  background: url("../../../src/background/title/chem-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-tovar {
+  background: url("../../../src/background/title/tovar-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-ecology {
+  background: url("../../../src/background/title/ecology-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-lingvo {
+  background: url("../../../src/background/title/lingvo-title.jpg") no-repeat center;
+  background-size: cover;
 }
 
 .slogans__body {
@@ -497,12 +596,12 @@ body {
 }
 
 .footer {
-  padding-top: 30px;
   font-size: 18px;
 }
 .footer__wrapper {
   max-width: 1600px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 .footer__top {
   background-color: #000;
