--- a/styles/partials/blocks/__header.scss
+++ b/styles/partials/blocks/__header.scss
@@ -7,9 +7,9 @@
 
   &__top {
     display: flex;
+    margin-top: 10px;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
     height: 70px;
     padding-top: 5px;
     padding-bottom: 5px;
