--- a/styles/partials/blocks/__section-reviews.scss
+++ b/styles/partials/blocks/__section-reviews.scss
@@ -33,7 +33,7 @@
     width: 100%;
     height: 100%;
     padding: 10px 15px;
-    background-color: #e5e4e2;
+    background-color: $color-leather;
     border-radius: 14px;
     opacity: 1;
   }
@@ -51,7 +51,7 @@
     justify-content: center;
     width: 50px;
     height: 50px;
-    background-color: #fff;
+    background-color: $color-red;
     border-radius: 50%;
     overflow: hidden;
     margin-right: 10px;
