--- a/styles/partials/blocks/__service-menu.scss
+++ b/styles/partials/blocks/__service-menu.scss
@@ -1,33 +1,86 @@
-.service-menu{
-  &__list{
+.service-menu {
+  &__list,
+  &__submenu {
     list-style: none;
+    background-color: $color-bordo;
+  }
+
+  &__list {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: $color-blue;
+    justify-content: space-around;
     margin-top: 10px;
-    padding: 8px 0;
     border-radius: 8px 8px 0 0;
   }
 
-  &__item{
-    max-width: 150px;
-    word-wrap: break-word;
+  &__item {
+    padding: 16px 0;
     text-align: center;
   }
 
-  &__link{
+  &__link,
+  &__sublink {
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 700;
-    color: #fff;
+    color: $color-white;
     font-size: 14px;
     transition-property: color;
     transition-duration: 500ms;
   }
 
-  &__link:hover{
-    color: $color-purple;
+  &__link:hover {
+    color: $color-dark;
   }
 
+  &__sublink:hover {
+    color: $color-gold;
+  }
+
+  &__sublist {
+    display: block;
+    position: relative;
+    text-align: left;
+    word-wrap: none;
+    transition-property: display;
+  }
+
+  &__sublist:hover &__submenu {
+    display: flex;
+  }
+
+  &__submenu {
+    display: none;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    position: absolute;
+    left: 0;
+    top: 38px;
+    z-index: 99;
+    border-radius: 0 0 8px 8px;
+    max-height: 300px;
+    overflow-y: scroll;
+
+    .service-menu__subitem {
+      word-wrap: none;
+      margin: 8px;
+      width: 300px;
+    }
+  }
+}
+
+//Настройка скролл-бара
+.scroll-body::-webkit-scrollbar {
+  width: 5px; /* здесь задается ширина скрола, в данном случае он не будет отображен */
+  background: #fff;
+}
+
+.scroll-body::-webkit-scrollbar-thumb {
+  background: $color-gold;
+}
+
+.scroll-body {
+  max-height: auto;
+  overflow-y: auto;
 }
