--- a/styles/partials/blocks/__slider.scss
+++ b/styles/partials/blocks/__slider.scss
@@ -22,7 +22,7 @@
     margin-right: 8px;
     width: 20px;
     height: 20px;
-    border: 1px solid #228be6;
+    border: 1.5px solid $color-red;
     border-radius: 50%;
     background-color: $color-bg-gray-light;
     appearance: none;
@@ -30,7 +30,7 @@
   }
 
   &__mark:checked {
-    background-color: #228be6;
+    background-color: $color-peach;
   }
 
   &__mark:last-child {
