--- a/pages/style.css
+++ b/pages/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 body {
   font-family: "Roboto", sans-serif;
-  color: rgba(255, 225, 240, 0.8);
+  color: rgb(255, 225, 240);
 }
 
 * {
@@ -23,7 +23,7 @@ body {
   padding: 0 10px;
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: rgba(255, 225, 240, 0.8);
+  background-color: rgb(255, 225, 240);
   height: 100%;
 }
 .main__wrapper .main__text {
@@ -170,7 +170,7 @@ body {
   padding: 3px 0;
   font-size: 25px;
   font-weight: 400;
-  color: rgba(255, 225, 240, 0.8);
+  color: rgb(255, 225, 240);
   transition-property: color;
 }
 .contacts__item .contacts__link:hover {
@@ -200,7 +200,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
-  color: rgba(255, 225, 240, 0.8);
+  color: rgb(255, 225, 240);
   font-size: 14px;
   transition-property: color;
   transition-duration: 500ms;
@@ -259,7 +259,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200px;
+  height: 300px;
   z-index: -1;
 }
 .section-exptitle__title::after {
@@ -274,9 +274,13 @@ body {
   z-index: 200;
 }
 .section-exptitle__title-text {
+  display: block;
+  padding: 10px 15px;
   color: rgb(45, 32, 58);
   font-size: 35px;
   z-index: 999;
+  border: 1px solid #000;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .title-bg-chem {
@@ -296,6 +300,41 @@ body {
 
 .title-bg-lingvo {
   background: url("../../../src/background/title/lingvo-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-author {
+  background: url("../../../src/background/title/author-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-stroitel {
+  background: url("../../../src/background/title/stroitel-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-economy {
+  background: url("../../../src/background/title/economy-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-computer {
+  background: url("../../../src/background/title/computer-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-video {
+  background: url("../../../src/background/title/video-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-photo {
+  background: url("../../../src/background/title/photo-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-old {
+  background: url("../../../src/background/title//old-title.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -388,7 +427,7 @@ body {
   text-align: justify;
   padding-right: 35px;
   text-indent: 30px;
-  color: rgba(255, 225, 240, 0.8);
+  color: rgb(255, 225, 240);
   margin-bottom: 10px;
   line-height: 1.25;
   hyphens: auto;
@@ -443,7 +482,7 @@ body {
 .card__info-item_strong {
   font-size: 18px;
   font-weight: 300;
-  color: rgba(255, 225, 240, 0.8);
+  color: rgb(255, 225, 240);
 }
 
 .card_theme-red {
@@ -479,14 +518,14 @@ body {
   background-color: #fff;
 }
 .card_theme-dark .card__title {
-  color: rgba(255, 225, 240, 0.8);
+  color: rgb(255, 225, 240);
 }
 .card_theme-dark .card__info-item {
-  color: rgba(255, 225, 240, 0.8);
+  color: rgb(255, 225, 240);
 }
 
 .section-clients {
-  background-color: rgba(255, 225, 240, 0.8);
+  background-color: rgb(255, 225, 240);
 }
 .section-clients__title {
   padding-top: 35px;
@@ -511,7 +550,7 @@ body {
   padding-bottom: 25px;
 }
 .section-docs__title-text {
-  color: rgba(255, 225, 240, 0.8);
+  color: rgb(255, 225, 240);
 }
 
 .section-reviews__wrapper {
