--- a/styles/partials/blocks/__backgrounds.scss
+++ b/styles/partials/blocks/__backgrounds.scss
@@ -22,3 +22,45 @@
     center;
   background-size: cover;
 }
+
+.title-bg-author {
+  background: url("../../../src/background/title/author-title.jpg") no-repeat
+    center;
+  background-size: cover;
+}
+
+.title-bg-stroitel {
+  background: url("../../../src/background/title/stroitel-title.jpg") no-repeat
+    center;
+  background-size: cover;
+}
+
+.title-bg-economy {
+  background: url("../../../src/background/title/economy-title.jpg") no-repeat
+    center;
+  background-size: cover;
+}
+
+.title-bg-computer {
+  background: url("../../../src/background/title/computer-title.jpg") no-repeat
+    center;
+  background-size: cover;
+}
+
+.title-bg-video {
+  background: url("../../../src/background/title/video-title.jpg") no-repeat
+    center;
+  background-size: cover;
+}
+
+.title-bg-photo {
+  background: url("../../../src/background/title/photo-title.jpg") no-repeat
+    center;
+  background-size: cover;
+}
+
+.title-bg-old {
+  background: url("../../../src/background/title//old-title.jpg") no-repeat
+    center;
+  background-size: cover;
+}
