--- a/styles/partials/blocks/__section-exptitle.scss
+++ b/styles/partials/blocks/__section-exptitle.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 300px;
     z-index: -1;
   }
 
@@ -21,8 +21,12 @@
   }
 
   &__title-text {
+    display: block;
+    padding: 10px 15px;
     color: $color-dark;
     font-size: 35px;
     z-index: 999;
+    border: 1px solid #000;
+    background-color: rgba(255, 255, 255, 0.7);
   }
 }
