--- a/styles/partials/blocks/__backgrounds.scss
+++ b/styles/partials/blocks/__backgrounds.scss
@@ -1,7 +1,6 @@
 //1. Химическая экспертиза
 .title-bg-chem {
-  background: url("../../../src/background/title/chem-title.jpg") no-repeat
-    center;
+  background: url("../src/background/title/chem-title.jpg") no-repeat center;
   background-size: cover;
 }
 
