--- a/pages/style.css
+++ b/pages/style.css
@@ -284,7 +284,7 @@ body {
 }
 
 .title-bg-chem {
-  background: url("../../../src/background/title/chem-title.jpg") no-repeat center;
+  background: url("../src/background/title/chem-title.jpg") no-repeat center;
   background-size: cover;
 }
 
