--- a/styles/partials/blocks/__slogans.scss
+++ b/styles/partials/blocks/__slogans.scss
@@ -3,8 +3,8 @@
     position: relative;
     padding-bottom: 45%;
     overflow: hidden;
-    background: url("../../src/background/slogans/video-screenshot.png")
-      no-repeat center;
+    background: url("../src/background/slogans/video-screenshot.png") no-repeat
+      center;
     background-size: cover;
   }
 
