--- a/styles/partials/blocks/__service-menu.scss
+++ b/styles/partials/blocks/__service-menu.scss
@@ -80,6 +80,15 @@
   background: $color-gold;
 }
 
+.scroll-body::-moz-scrollbar {
+  width: 5px; /* здесь задается ширина скрола, в данном случае он не будет отображен */
+  background: #fff;
+}
+
+.scroll-body::-moz-scrollbar-thumb {
+  background: $color-gold;
+}
+
 .scroll-body {
   max-height: auto;
   overflow-y: auto;
